# mywc

./: .gitignore  CMakeLists.txt  changelog.md  readme.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  commandline.cpp  commandline.h  main.cpp  version.h  version.hpp
test/: CMakeLists.txt
